pkg/tests/ossm-federation/testdata/traffic-splitting/west-mesh/authorizationpolicy-direct-to-direct.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# AuthorizationPolicy resources that apply when ingress gateway is using
# AUTO_PASSTHROUGH.  In these cases, the gateway does not authenticate, so
# the policy cannot match against principals.  Note, if proxying on the import
# side, the egress gateway's principal should be used instead of the workload's.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mongodb-authz
  namespace: west-mesh-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: mongodb
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-ratings-v2
      to:
        - operation:
            ports:
              - '27017'
      when:
        - key: connection.sni
          values:
            - '*.mongodb.west-mesh-exports.svc.cluster.local'

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ratings-authz
  namespace: west-mesh-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ratings
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-reviews-v2
      to:
        - operation:
            hosts:
              - '*.ratings.west-mesh-bookinfo.svc.local'
            ports:
              - '9080'
