pkg/tests/ossm-federation/testdata/traffic-splitting/west-mesh/exportedserviceset.yaml
apiVersion: federation.maistra.io/v1
kind: ExportedServiceSet
metadata:
  name: east-mesh
  namespace: west-mesh-system
spec:
  exportRules:
  - type: NameSelector
    nameSelector:
      namespace: west-mesh-bookinfo
      name: ratings
      alias:
        namespace: bookinfo
        name: ratings
  - type: NameSelector
    nameSelector:
      namespace: west-mesh-bookinfo
      name: mongodb
      alias:
        namespace: bookinfo
        name: mongodb
