pkg/tests/ossm-federation/testdata/traffic-splitting/west-mesh/smmr.yaml
apiVersion: maistra.io/v1
kind: ServiceMeshMemberRoll
metadata:
  name: default
  namespace: west-mesh-system
spec:
  members:
  - west-mesh-bookinfo
